--- a/exercice7.html
+++ b/exercice7.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>exercice 7</title>
+  <link rel="stylesheet"  href="style.css" />
 </head>
 
 <body>
@@ -11,8 +12,8 @@
 
 
   <form method=post>
-    <fieldset>
-      <legend>Votre identité</legend>
+    <fieldset class="identité">
+      <legend class="identité">Votre identité</legend>
 <p>
   <label>1. Nom:</label>
   <input type="text" name="Nom" placeholder="Nom">
@@ -32,8 +33,8 @@
 
 <form method=post>
 
-    <fieldset>
-  <legend>Adresse de livraison</legend>
+    <fieldset class="adresse">
+  <legend class="adresse">Adresse de livraison</legend>
 
 <p>
   <label>1. Adresse:</label>
@@ -53,8 +54,8 @@
 
 
 <form method=post>
-    <fieldset>
-    <legend>Informations de règlement</legend>
+    <fieldset class="payement">
+    <legend class="payement">Informations de règlement</legend>
 <p>1. Type de carte bancaire: </p>
   <input type="radio" name="payement" value="VISA" id="VISA" /><label for="VISA">VISA</label></br>
   <input type="radio" name="payement" value="Mastercard" id="Mastercard" /><label for="Mastercard">Mastercard</label></br>
@@ -80,4 +81,4 @@
 
 </body>
 
-</hml>
+</html>
